fix: исправить методы получения списка событий - getEvents(), searchEvents()